[gd_scene load_steps=18 format=3 uid="uid://bdrxgm7bhh624"]

[ext_resource type="Script" uid="uid://ce47vbv62ygf1" path="res://Scenes/UI/UIScripts/Components/buttonrect.gd" id="1_4c8mr"]
[ext_resource type="Texture2D" uid="uid://6peopgp1jim7" path="res://Scenes/UI/UIAssets/Button/BRectOutline.png" id="2_3ivo4"]
[ext_resource type="Shader" uid="uid://e3oxmp7fc20y" path="res://Scenes/UI/UIAssets/Shader/patternxy.gdshader" id="2_4c8mr"]
[ext_resource type="Texture2D" uid="uid://dilt7sp7iqmco" path="res://Scenes/UI/UIAssets/BG/BGPatternBlue.png" id="2_dx8yw"]
[ext_resource type="PackedScene" uid="uid://bunuilmma82bm" path="res://Scenes/UI/Components/Font/default_label.tscn" id="3_cmw60"]
[ext_resource type="Texture2D" uid="uid://b3fwljtqyuep4" path="res://Scenes/UI/UIAssets/Button/Mask/BStarMask.png" id="3_ps82v"]
[ext_resource type="Texture2D" uid="uid://dkv3rss7ogob6" path="res://Scenes/UI/UIAssets/Button/BStarOutline.png" id="4_dx8yw"]
[ext_resource type="Texture2D" uid="uid://dl1ehwkdmi3ym" path="res://Scenes/UI/UIAssets/BG/BGPatternYellow.png" id="6_4c8mr"]
[ext_resource type="AudioStream" uid="uid://52a64tgjs46e" path="res://Scenes/UI/Components/Buttons/AudioAssets/buttonRect.mp3" id="9_ojhm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6jmn0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ivo4"]
bg_color = Color(0.972549, 0.945098, 0.866667, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojhm6"]
bg_color = Color(0.972549, 0.945098, 0.866667, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbc24"]
shader = ExtResource("2_4c8mr")
shader_parameter/scroll_speed = Vector2(0.1, 0.05)
shader_parameter/time_offset = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4c8mr"]
texture = ExtResource("2_dx8yw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c8mr"]
bg_color = Color(0.52549, 0.627451, 0.882353, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ojhm6"]
texture = ExtResource("6_4c8mr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4c8mr"]

[node name="Brectlevelselect" type="Button"]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_6jmn0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6jmn0")
script = ExtResource("1_4c8mr")

[node name="Rect" type="Panel" parent="."]
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 359.0
offset_right = -46.0
offset_bottom = -359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ivo4")

[node name="RectNormal" type="Panel" parent="Rect"]
clip_children = 2
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ojhm6")

[node name="RectHover" type="Panel" parent="Rect"]
clip_children = 2
texture_repeat = 2
material = SubResource("ShaderMaterial_jbc24")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4c8mr")

[node name="OutlineRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ivo4")
expand_mode = 1
stretch_mode = 5

[node name="MaskStar" type="TextureRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 111.0
offset_bottom = -597.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.946457)
texture = ExtResource("3_ps82v")
stretch_mode = 5

[node name="RectNormal" type="Panel" parent="MaskStar"]
clip_children = 2
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4c8mr")

[node name="RectHover" type="Panel" parent="MaskStar"]
clip_children = 2
texture_repeat = 2
material = SubResource("ShaderMaterial_jbc24")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 1152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ojhm6")

[node name="Star Outline" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 643.0
offset_top = 113.0
offset_right = -648.0
offset_bottom = -613.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dx8yw")
expand_mode = 1
stretch_mode = 5

[node name="default_label" parent="." instance=ExtResource("3_cmw60")]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 145.0
offset_right = 0.0
offset_bottom = -634.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/normal_font_size = 100
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="default_label2" parent="." instance=ExtResource("3_cmw60")]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Click To Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 288.0
offset_bottom = -267.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_4c8mr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4c8mr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4c8mr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4c8mr")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ojhm6")

[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
